# mindful-watch

./: .env.example  .env.swp  .gitignore  README.md  app.py  check_api.py  config.py  db_stats.py  hello.py  logging_config.py  pyproject.toml  requirements.txt  seed_config.py  seed_database.py  test_utils.py  utils.py
docs/: PROJECT_SUMMARY.md
mindful_watch_db/: chroma.sqlite3
