[project]
name = "mindful-watch"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.0",
    "google-api-python-client>=2.187.0",
    "isodate>=0.7.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "tmdbv3api>=1.9.0",
    "yt-dlp>=2024.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
